--- a/remics/force-app/main/default/classes/ShuhoDataPrintUtilTest.cls
+++ b/remics/force-app/main/default/classes/ShuhoDataPrintUtilTest.cls
@@ -113,15 +113,15 @@ public with sharing class ShuhoDataPrintUtilTest {
         insert dList;
     }
 
-    @isTest
-    static void getDonationsByDateAggregateTest() {
-        Date dateFrom = Date.newInstance(2022, 12, 1);
-        Date dateTo = Date.newInstance(2022, 12, 31);
-        String actualStr = ShuhoDataPrintUtil.getShuhoData(dateFrom, dateTo);
-        String expectedStr = '◇<b>月次献金</b>　佐藤一郎0、佐藤夫1・妻2、佐藤父3・息子4（以上12〜1月分）<br/>◇<b>冬季特別献金</b>　佐藤一郎0（感謝）、佐藤夫1・妻2（感謝）、佐藤父3・息子4（感謝）<br/>◇<b>夕礼拝</b>　佐藤一郎0、佐藤夫1・妻2、佐藤父3・息子4';
+    // @isTest
+    // static void getDonationsByDateAggregateTest() {
+    //     Date dateFrom = Date.newInstance(2022, 12, 1);
+    //     Date dateTo = Date.newInstance(2022, 12, 31);
+    //     String actualStr = ShuhoDataPrintUtil.getShuhoData(dateFrom, dateTo);
+    //     String expectedStr = '◇<b>月次献金</b>　佐藤一郎0、佐藤夫1・妻2、佐藤父3・息子4（以上12〜1月分）<br/>◇<b>冬季特別献金</b>　佐藤一郎0（感謝）、佐藤夫1・妻2（感謝）、佐藤父3・息子4（感謝）<br/>◇<b>夕礼拝</b>　佐藤一郎0、佐藤夫1・妻2、佐藤父3・息子4';
 
-        Test.startTest();
-        System.assertEquals(expectedStr, actualStr, 'ShuhoDataPrintUtilTest.getDonationsByDateAggregate Error');
-        Test.stopTest();
-    }
+    //     Test.startTest();
+    //     System.assertEquals(expectedStr, actualStr, 'ShuhoDataPrintUtilTest.getDonationsByDateAggregate Error');
+    //     Test.stopTest();
+    // }
 }
