Add: spouse or family field on DonationCreatePage

--- a/remics/force-app/main/default/classes/PersonDao.cls
+++ b/remics/force-app/main/default/classes/PersonDao.cls
@@ -126,8 +126,10 @@ public with sharing class PersonDao {
                 Name,
                 PersonNumCurrent__c,
                 DonationUnitClass__c,
+                Spouse__r.Name,
                 WeeklyReportBoxNum__c,
-                ShelfNum__c
+                ShelfNum__c,
+                (SELECT LedgerFamily__r.Name FROM LedgerRef__r WHERE LedgerFamilyDeceased__c = FALSE ORDER BY LedgerRelationshipFromLedger__c)
             FROM Person__c 
             WHERE PersonNumCurrent__c = :personNumCurrent
             AND Deceased__c = FALSE
@@ -145,8 +147,10 @@ public with sharing class PersonDao {
                 Name,
                 PersonNumCurrent__c,
                 DonationUnitClass__c,
+                Spouse__r.Name,
                 WeeklyReportBoxNum__c,
-                ShelfNum__c
+                ShelfNum__c,
+                (SELECT LedgerFamily__r.Name FROM LedgerRef__r WHERE LedgerFamilyDeceased__c = FALSE ORDER BY LedgerRelationshipFromLedger__c)
             FROM Person__c 
             WHERE id = :id
             LIMIT 1
